--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities; 
 
+ html {
+  scroll-behavior: smooth;
+}
+
 body{
   overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
@@ -11,5 +15,6 @@ body{
  position: relative;
  background-color:black;
  color:white;
- 
+
+
 }
